Projet GL/test/src/test/deca/context/valid/increment2/float-op-int-int.deca
//Raison : type_arith_op(int, int) = int

// Resultats : Ligne 15 c must be an integer

// Historique : cree le 09/01/2023

{
    int a,b;
    float c;

    a = 2;
    b = 3;

    //Must be refused
    c = a+b;
}